--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -1,8 +1,14 @@
 <div class="card-deck">
   {% for author in site.data.authors %}
   <div class="card d-flex justify-content-center align-items-center text-center p-3" id="author-card" data-toggle="modal" data-target="#author-{{ author.id }}">
-    <i class="material-icons">face</i> <br />
-    {{ author.Name }}
+    {% if author.url %}
+    <img class="card-img-top" src="{{author.url}}" alt="Cover of {{author.title}}">
+    {% else %}
+    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/7/72/Placeholder_book.svg" title="By Rugby471 (talk · contribs) [GFDL (http://www.gnu.org/copyleft/fdl.html) or CC BY-SA 4.0  (https://creativecommons.org/licenses/by-sa/4.0)], from Wikimedia Commons" alt="Book cover placeholder">
+    {% endif %}
+    <div class="card-body">
+      <h2 class="card-title">{{ author.Name }}</h2>
+    </div>    
   </div>
   <!-- Modal -->
   <div class="modal fade" id="author-{{ author.id }}" tabindex="-1" role="dialog" aria-labelledby="{{ author.Name }}" aria-hidden="true">
