--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<header class="pt-4 pb-3 d-none d-md-block">
+  <div class="row justify-content-center">
+    <div class="col-auto">
+      <a href="/" class="logo">
+        <img src="/assets/images/fit-authors.png" alt="FIT Authors logo">
+      </a>
+    </div>
+  </div>
+</header>
+<nav class="navbar navbar-expand-md">
   <div class="container">
-    <a class="navbar-brand" href="/">{{ site.title }}</a>
+    <a class="navbar-brand d-md-none" href="/"><img src="/assets/images/fit-authors.png" alt="FIT Authors logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false"><title>Menu</title><path stroke="#343a40" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path></svg>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav m-auto">
         {% for item in site.menu %}
           {% if item.sub %}
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{ item.label }}
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               {% for sub in item.sub %}
-              <a class="dropdown-item" href="{{ sub.link | relative_url }}">{{ sub.label }}</a>
+              <a class="dropdown-item text-dark" href="{{ sub.link | relative_url }}">{{ sub.label }}</a>
               {% endfor %}
             </div>
           </li>
           {% else %}
           <li class="nav-item {% if page.title == item.label %}active{% endif %}">
-            <a class="nav-link" href="{{ item.link | relative_url }}">{{ item.label }}</a>
+            <a class="nav-link text-dark" href="{{ item.link | relative_url }}">{{ item.label }}</a>
           </li>
           {% endif %}
         {% endfor %}
