--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="pt-4 pb-3 d-none d-md-block">
+<header class="container pt-4 pb-3 d-none d-md-block">
   <div class="row justify-content-center">
     <div class="col-auto">
       <a href="/" class="logo">
