--- a/_includes/event-slide.html
+++ b/_includes/event-slide.html
@@ -3,7 +3,10 @@
   <div class="row align-items-center">
     <div class="col-md-8">
       <p class="lead">{{event.date | date: "%A, %B %d, %Y" }} | {{event.time}}</p>
-      <h1 class="display-3 font-italic mb-3">
+      <h1 class="d-none d-md-block display-3 font-italic mb-3">
+        {{event.author}}
+      </h1>
+      <h1 class="d-md-none font-italic mb-3">
         {{event.author}}
       </h1>
       <p>{{event.location}}</p>
@@ -12,9 +15,9 @@
     </div>
     <div class="col-md-4">
       {% if event.image %}
-      <img class="img-fluid rounded" src="/assets/images/{{event.image}}" alt="{{author.name}} Event Image" />
+      <img class="img-fluid rounded" src="/assets/images/{{event.image}}" alt="{{event.author}} Event Image" />
       {% elsif event.author-image %}
-      <img class="img-fluid rounded" src="/assets/images/{{event.author-image}}" alt="Portrait of {{author.name}}" />
+      <img class="img-fluid rounded" src="/assets/images/{{event.author-image}}" alt="Portrait of {{event.author}}" />
       {% endif %}
     </div>
   </div>
