--- a/_includes/featured-event.html
+++ b/_includes/featured-event.html
@@ -1,4 +1,4 @@
 {% assign sorted = site.events | sort: 'date' | reverse %}
 {% assign event = sorted[0] %}
 {% include event-slide.html %}
-<p class="text-center lead"><a class="text-dark" href="/events">Browse More Events</a></p>
+<p class="text-right lead" id="more-events"><a class="text-dark" href="/events">See More Events</a></p>
