--- a/_includes/profiles.html
+++ b/_includes/profiles.html
@@ -8,7 +8,7 @@
       {% else %}
 
       {% endif %}
-      <div class="card-img-overlay d-flex justify-content-center align-items-center rounded">
+      <div class="card-img-overlay d-flex justify-content-center align-items-end rounded">
         <h1 class="text-center mb-0">{{author.name}}</h1>
       </div>
     </a>
