--- a/_includes/event-slide.html
+++ b/_includes/event-slide.html
@@ -3,15 +3,41 @@
   <div class="row align-items-center">
     <div class="col-md-8">
       <p class="lead">{{event.date | date: "%A, %B %d, %Y" }} | {{event.time}}</p>
-      <h1 class="d-none d-md-block display-3 font-italic mb-4">
-        {{event.author}}
+      <h1 class="d-none d-md-block display-4 font-italic mb-4">
+        {{event.event_title}}
       </h1>
       <h1 class="d-md-none font-italic mb-3">
-        {{event.author}}
+        {{event.event_title}}
       </h1>
-      <p>{{event.location}}</p>
+      <p>
+        {{event.location}}
+        {% if event.map %}
+        <!-- Map Button -->
+        <a class="text-muted" id="map-button" aria-label="Map" data-toggle="modal" data-target="#mapModal-{{event.date | date: "%Y%m%d"}}">
+          <i aria-hidden class="fas fa-map" title="Map"></i>
+        </a>
+        <!-- Map Modal -->
+        <div class="modal fade" id="mapModal-{{event.date | date: "%Y%m%d"}}" tabindex="-1" role="dialog" aria-labelledby="{mapModal-{{event.date | date: "%Y%m%d"}}" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="mapModal-{{event.date | date: "%Y%m%d"}}">{{event.location}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="embed-responsive embed-responsive-1by1">
+                  {{event.map}}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% endif %}
+      </p>
       <p>{{event.description}}</p>
-      <p><a class="text-dark" href="{{event.url}}">Continue reading...</a></p>
+      <p><a class="small" href="{{event.url}}">Continue reading...</a></p>
     </div>
     <div class="col-md-4">
       {% if event.image %}
