--- a/assets/style.scss
+++ b/assets/style.scss
@@ -165,7 +165,6 @@ header .logo img {
   cursor: pointer;
   font-size: 1rem;
 }
-#profile-button {
-  font-size: 1rem;
-  vertical-align: middle;
+#profile-link {
+  border-top: 1px solid rgba(0,0,0,.125);
 }
