--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -7,7 +7,7 @@ layout: default
         {{page.event_title}}
       </h1>
       {% if page.image %}
-      <img class="img-fluid rounded mb-2" src="/assets/images/{{page.image}}" alt="{{page.author}} Event Image" />
+      <img class="img-fluid rounded mb-2 mx-auto d-block" src="/assets/images/{{page.image}}" alt="{{page.author}} Event Image" />
       {% endif %}
       <p class="font-italic">{{page.description}}</p>
       <p class="lead text-center my-5">
