--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -74,7 +74,7 @@
 </div>
 <div class="row justify-content-center">
   <div class="col-md-8">
-    <p class="small mt-4" id="more-events">For a more extensive list of works by FIT Authors, please visit the <a href="http://fit.sunyconnect.suny.edu:4690/F/?func=find-e&find_scan_code=FIND_WSU&request=FIT+authors&adjacent=N&x=35&y=8" target="_blank">Library Catalog</a></p>
+    <p class="small mt-4" id="more-events">...For a more extensive list of works by FIT Authors, please visit the <a href="http://fit.sunyconnect.suny.edu:4690/F/?func=find-e&find_scan_code=FIND_WSU&request=FIT+authors&adjacent=N&x=35&y=8" target="_blank">Library Catalog</a></p>
   </div>
 
 </div>
