--- a/assets/style.scss
+++ b/assets/style.scss
@@ -23,7 +23,7 @@ footer {
   width: 100%;
 }
 header .logo img {
-  height: 100px;
+  max-height: 100px;
   max-width: 100%;
 }
 .navbar-brand img {
