--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" class="h-100">
   {% include head.html %}
-  <body>
+  <body class="h-100 d-flex flex-column">
     {% include header.html %}
-    <div class="container mt-5" id="main">
+    <div class="container my-5 flex-shrink-0" id="main">
       {{ content }}
     </div>
     {% include footer.html %}
