--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -71,7 +71,7 @@ layout: default
     {% endif %}
   </div>
 </div>
-<div class="row align-items-center justify-content-between mb-5 pb-5" id="interview-block">
+<div class="row align-items-center justify-content-between" id="interview-block">
   <div class="col-md-7">
     {{ content }}
   </div>
