--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,21 @@
-<footer class="text-muted py-5">
-  <div class="container">
-    <p class="float-right">
-      <a href="#">Back to top</a>
+<footer class="mt-auto">
+  <div class="container text-center small py-5">
+    <a href="https://www.fitnyc.edu">
+      <img class="mb-3" src="/assets/images/wordmark-black-1-line.png" alt="FIT SUNY Logo" id="fit-logo">
+    </a>
+    <p>
+      ©2019 Fashion Institute of Technology
+      <br>
+      All rights reserved.
     </p>
     <p>This site is an initiative of the FIT Library and the Faculty Senate Library Committee.</p>
+    <ul class="list-inline mb-0">
+      <li class="list-inline-item"><a class="text-muted" href="https://www.fitnyc.edu/library/" aria-label="FIT Library Homepage"><i class="fas fa-home" aria-hidden="" title="FIT Library Homepage"></i></a></li>
+      <li class="list-inline-item"><a class="text-muted" href="https://www.facebook.com/FITLibrary" aria-label="FIT Library Facebook"><i class="fab fa-facebook" aria-hidden="" title="FIT Library Facebook"></i></a></li>
+      <li class="list-inline-item"><a class="text-muted" href="https://twitter.com/FITLibrary" aria-label="FIT Library Twitter"><i class="fab fa-twitter" aria-hidden="" title="FIT Library Twitter"></i></a></li>
+      <li class="list-inline-item"><a class="text-muted" href="http://pinterest.com/fitlibrary/" aria-label="FIT Library Pinterest"><i class="fab fa-pinterest-p" aria-hidden="" title="FIT Library Pinterest"></i></a></li>
+      <li class="list-inline-item"><a class="text-muted" href="https://www.instagram.com/fitnyclibrary/" aria-label="FIT Library Instagram"><i class="fab fa-instagram" aria-hidden="" title="FIT Library Instagram"></i></a></li>
+
+    </ul>
   </div>
 </footer>
