--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="container pt-4 pb-3 d-none d-md-block">
+<header class="container pt-4 pb-3 d-none d-md-block flex-shrink-0">
   <div class="row justify-content-center">
     <div class="col-auto">
       <a href="/" class="logo">
@@ -7,7 +7,7 @@
     </div>
   </div>
 </header>
-<nav class="navbar navbar-expand-md">
+<nav class="navbar navbar-expand-md flex-shrink-0">
   <div class="container">
     <a class="navbar-brand d-md-none" href="/"><img src="/assets/images/fit-authors.png" alt="FIT Authors logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
