--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -72,9 +72,15 @@
   </div>
   {% endfor %}
 </div>
-<div class="row justify-content-center">
-  <div class="col-md-8">
-    <p class="small mt-4" id="more-events">...For a more extensive list of works by FIT Authors, please visit the <a href="http://fit.sunyconnect.suny.edu:4690/F/?func=find-e&find_scan_code=FIND_WSU&request=FIT+authors&adjacent=N&x=35&y=8" target="_blank">Library Catalog</a></p>
+<div class="row justify-content-center align-items-center pt-5" id="catalog-link">
+  <div class="col-auto order-md-last">
+    <a class="text-muted" href="http://fit.sunyconnect.suny.edu:4690/F/?func=find-e&find_scan_code=FIND_WSU&request=FIT+authors&adjacent=N&x=35&y=8" target="_blank">
+      <i class="fas fa-book fa-3x float-left"></i>
+    </a>
   </div>
-
+  <div class="col-8 col-md-auto order-md-first">
+    <p class="mb-0">
+      Find more publications in the FIT Library Catalog
+    </p>
+  </div>
 </div>
