--- a/assets/style.scss
+++ b/assets/style.scss
@@ -5,22 +5,12 @@
 @import url('fonts/halyard.css');
 @import url('https://use.fontawesome.com/releases/v5.5.0/css/all.css');
 
-html {
-  position: relative;
-  min-height: 100%;
-}
 body {
   font-family: "Halyard Micro",sans-serif;
-  margin-bottom: 184px;
 }
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   font-family: "Halyard Text",sans-serif;
   font-weight: 700;
-}
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 header .logo img {
   max-height: 100px;
@@ -28,6 +18,13 @@ header .logo img {
 }
 .navbar-brand img {
   height: 30px;
+}
+footer {
+  background-color: #f9f9f9;
+  border-top: .05rem solid #e5e5e5;
+}
+footer #fit-logo {
+  height: 25px;
 }
 // Home
 #more-events {
@@ -84,7 +81,7 @@ header .logo img {
   }
 }
 // Profiles
-#author-block, #work-block, #interview-block {
+#author-block, #work-block {
   border-bottom: 1px solid rgba(0,0,0,.125);
 }
 #author-name p, #author-name ul {
@@ -103,6 +100,10 @@ header .logo img {
   -moz-column-gap: 1.25rem;
   orphans: 1;
   widows: 1;
+}
+#publications.card-columns .card {
+  display: inline-block;
+  width: 100%;
 }
 #publications.card-columns #publication-card {
   margin-bottom: 1.25rem;
@@ -157,6 +158,12 @@ header .logo img {
 }
 #publications .modal #description-button a[aria-expanded="true"]::after {
   content: 'Show Less';
+}
+#catalog-link {
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+}
+#catalog-link i {
+  vertical-align: middle;
 }
 // Events
 #event-slide {
