--- a/assets/style.scss
+++ b/assets/style.scss
@@ -26,6 +26,11 @@ footer {
 footer #fit-logo {
   height: 25px;
 }
+blockquote {
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin: initial;
+}
 // Home
 #more-events {
   margin-top: -1.5rem;
