--- a/_includes/event-slide.html
+++ b/_includes/event-slide.html
@@ -17,7 +17,7 @@
           <i aria-hidden class="fas fa-map" title="Map"></i>
         </a>
         <!-- Map Modal -->
-        <div class="modal fade" id="mapModal-{{event.date | date: "%Y%m%d"}}" tabindex="-1" role="dialog" aria-labelledby="{mapModal-{{event.date | date: "%Y%m%d"}}" aria-hidden="true">
+        <div class="modal fade" id="mapModal-{{event.date | date: "%Y%m%d"}}" tabindex="-1" role="dialog" aria-labelledby="mapModal-{{event.date | date: "%Y%m%d"}}" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
