--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -67,7 +67,7 @@ layout: default
   </div>
   <div class="col-md-4">
     {% if page.work.image %}
-    <img class="img-fluid rounded" src="/assets/images/{{page.work.image}}" alt="Cover of {{page.work.image}}" />
+    <img class="img-fluid rounded" src="/assets/images/{{page.work.image}}" alt="Cover of {{page.work.title}}" />
     {% endif %}
   </div>
 </div>
