--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en-us" class="h-100">
   {% include head.html %}
   <body class="h-100 d-flex flex-column">
+    <a class="sr-only sr-only-focusable" href="#main">Skip to main content</a>
     {% include header.html %}
     <div class="container my-5 flex-shrink-0" id="main">
       {{ content }}
