fix date format

--- a/_includes/event-slide.html
+++ b/_includes/event-slide.html
@@ -2,7 +2,7 @@
 <div class="jumbotron bg-white" id="event-slide">
   <div class="row align-items-center">
     <div class="col-md-8">
-      <p class="lead">{{event.date | date: "%A, %B %d, %Y" }} | {{event.time}}</p>
+      <p class="lead">{{event.date | date: "%A, %B %e, %Y" }} | {{event.time}}</p>
       <h1 class="d-none d-md-block display-4 font-italic mb-4">
         {{event.event_title}}
       </h1>
