--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -11,7 +11,7 @@ layout: default
       {% endif %}
       <p class="font-italic">{{page.description}}</p>
       <p class="lead text-center my-5">
-        {{page.date | date: "%A, %B %d, %Y" }} | {{page.time}}<br>
+        {{page.date | date: "%A, %B %e, %Y" }} | {{page.time}}<br>
         {{page.location}}
         {% if page.map %}
         <!-- Map Button -->
