updated for onesearch

--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -53,9 +53,9 @@
                 {% endif %}
               {% endif %}
               <ul class="nav">
-                {% if publication.stylecat %}
+                {% if publication.onesearch %}
                 <li class="nav-item">
-                  <a class="nav-link text-muted p-0 mr-md-5" id="style-cat" href="{{ publication.stylecat }}" target="_blank"><small>Find in the FIT Library <i class="fas fa-external-link-alt"></i></small></a>
+                  <a class="nav-link text-muted p-0 mr-md-5" id="style-cat" href="{{ publication.onesearch }}" target="_blank"><small>Find in the FIT Library <i class="fas fa-external-link-alt"></i></small></a>
                 </li>
                 {% endif %}
                 {% if publication.preview %}
